--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
       <h2>Main Content</h2>
       <p>This is the main content section.</p>
     </section>
+    <section>
+      <h2>Content 2</h2>
+      <p>Second content section.</p>
+      <div class="cards">
+        <div class="card">Card 1</div>
+        <div class="card">Card 2</div>
+        <div class="card">Card 3</div>
+      </div>
+    </section>
+    <section>
+      <h2>Content 3</h2>
+      <p>This is the last content section.</p>
+      <div>
+        <button>Button 1</button>
+        <button>Button 2</button>
+        <button>Button 3</button>
+        <button>Button 4</button>
+        <button>Button 5</button>
+      </div>
+    </section>
   </main>
 
   <footer>
